whisply-rs/tui/src/status/snapshots/whisply_tui__status__tests__status_snapshot_truncates_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────────────────────────────╮
│  >_ Whisply (v0.147.0-wsply.1)                                     │
│                                                                    │
│  Run whisply usage for up-to-date                                  │
│  limits, resets, and rate card                                     │
│                                                                    │
│  Model:            gpt-5.1-codex-max (reasoning high, summaries de │
│  Model provider:   Whisply                                         │
│  Directory: [[workspace]]                                          │
│  Permissions:      Custom (workspace with network access, Ask for  │
│  Agents.md:        <none>                                          │
│                                                                    │
│  5h limit:         [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)  │
╰────────────────────────────────────────────────────────────────────╯
