whisply-rs/tui/src/status/snapshots/whisply_tui__status__tests__status_snapshot_wraps_enterprise_monthly_credit_details_in_narrow_terminal.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭────────────────────────────────────────────╮
│  >_ Whisply (v0.147.0-wsply.1)             │
│                                            │
│  Run whisply usage for up-to-date          │
│  limits, resets, and rate card             │
│                                            │
│  Model:                  gpt-5.1-codex-max │
│  Model provider:         Whisply           │
│  Directory: [[workspace]]                  │
│  Permissions:            Custom (workspace │
│  Agents.md:              <none>            │
│                                            │
│  Monthly credit limit:   68% left          │
│                          (resets 07:08 on  │
│                          7 May)            │
│                          8,000 of 25,000   │
│                          credits used      │
╰────────────────────────────────────────────╯
